# focusforge

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py  docker-compose.override.yml  docker-compose.yml
.devcontainer/: .env.devcontainer  Dockerfile  README.md  devcontainer.json  docker-compose.devcontainer.yml  post-create.sh  post-start.sh
.github/workflows/: ci.yml
configs/: config_vars.example.yaml  secrets.example.json  static_config.yaml  telegram_bot_commands.yaml
configs/environments/: local.yaml  production.yaml  staging.yaml
deploy/cloudflared/: Dockerfile  entrypoint.sh  register.sh  start.sh
deploy/migrator/: run_migrations.sh
deploy/postgres/: postgresql.conf
deploy/tunnel/: Dockerfile  entrypoint.sh
docker/: nginx.conf
docker/mongo/: init.js
docker/postgres/: init.sql
docker/redis/: redis.conf  sentinel.conf
docs/: api.md  architecture.md  data-retention.md  deployment.md  domain-model.md  observability.md  telegram-flows.md
docs/adr/: 0001-layered-architecture.md  0002-postgres-as-source-of-truth.md  0003-redis-caching-strategy.md  0004-mongo-for-flexible-data.md
migrations/mongo/: 001_indexes.js  002_seed_defaults.js
migrations/postgres/: 001_initial.sql  002_indexes.sql  003_idempotency.sql  004_task_history_triggers.sql  005_focus_session_constraints.sql  006_soft_delete_and_audit.sql
scripts/: apply_migrations.sh  format.sh  lint.sh  run_local.sh  seed_demo_data.sh  test_integration.sh  test_unit.sh  wait_for_services.sh
src/: main.cpp
src/app/: bootstrap.cpp  bootstrap.hpp  component_list.cpp  component_list.hpp
src/core/: errors.hpp  ids.hpp  pagination.hpp  result.hpp  text.cpp  text.hpp  time.cpp  time.hpp
src/domain/: activity_event.hpp  enums.hpp  focus_session.hpp  reminder.hpp  report.hpp  task.hpp  user.hpp
src/dto/: admin_requests.hpp  common.hpp  focus_requests.hpp  report_requests.hpp  task_requests.hpp  telegram_update.cpp  telegram_update.hpp  user_requests.hpp
src/handlers/: admin_handler.cpp  admin_handler.hpp  focus_handler.cpp  focus_handler.hpp  health_handler.cpp  health_handler.hpp  reminders_handler.cpp  reminders_handler.hpp  reports_handler.cpp  reports_handler.hpp  tasks_handler.cpp  tasks_handler.hpp  telegram_webhook_handler.cpp  telegram_webhook_handler.hpp  users_handler.cpp  users_handler.hpp
src/observability/: logging.cpp  logging.hpp  metrics.cpp  metrics.hpp  request_context.cpp  request_context.hpp  tracing.cpp  tracing.hpp
src/repositories/: interfaces.hpp
src/services/: analytics_service.cpp  analytics_service.hpp  conversation_service.cpp  conversation_service.hpp  focus_service.cpp  focus_service.hpp  idempotency_service.cpp  idempotency_service.hpp  notification_service.cpp  notification_service.hpp  planner_service.cpp  planner_service.hpp  reminder_service.cpp  reminder_service.hpp  streak_service.cpp  streak_service.hpp  (+4 more)
tests/: CMakeLists.txt
tests/e2e/: test_concurrency.py  test_happy_path.py  test_restart_recovery.py
tests/fixtures/mongo/: seed.js
tests/fixtures/postgres/: seed.sql
tests/fixtures/telegram/updates/: create_task.json  report_week.json  start.json  start_focus.json
tests/functional/: test_error_paths.py  test_focus_flow.py  test_reports.py  test_task_flow.py  test_telegram_start.py
tests/integration/mongo/: event_log_it.cpp  preferences_repository_it.cpp
tests/integration/postgres/: migration_smoke_it.cpp  session_repository_it.cpp  task_repository_it.cpp
tests/integration/redis/: cache_repository_it.cpp  rate_limit_it.cpp
tests/unit/: focus_service_test.cpp  planner_service_test.cpp  streak_service_test.cpp  task_service_test.cpp  validators_test.cpp
(+74 files in other folders)
